tests/fixtures/valid/minimal_valid.py
"""Minimal valid PyATB script - import and required data references."""

import pyatb  # noqa: F401

hr_file = "HR.dat"
sr_file = "SR.dat"
